--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,6 +1,7 @@
 {
     "emmet.includeLanguages": {
         "javascript": "javascriptreact",
-	"html.handlebars": "html"
+        "scss": "css",
+	    "html.handlebars": "html"
     }
 }
